hello-world/config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
  - hosts:
    - k8s.flowzdigital.com  
    secretName: k8s-tls-secret
  rules:
    - host: k8s.flowzdigital.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kube8s
                port:
                  number: 80
